styles/main.css
*, *:before, *:after {
  box-sizing: border-box;
}

html {
  font-size: 10px;
  scroll-behavior: smooth;
}

body {
  background-color: #121121;
  color: #FBF8F3;
  height: 100%;
  margin: 0 auto;
  position: relative;
  width: 100%;
}

.container {
  max-width: 320px;
}

/* Colors: #121121 (dark blue) #FEEB99 (yellow) #FBF8F3 (gray) #4B182E (red)  */

/** typography **/

h1 {
  font-family: 'Montserrat Alternates', sans-serif;
  font-size: 4.2rem; /* 42px */
  line-height: 5.1rem; /* 51px */
}

h2 {
  font-family: 'Montserrat Alternates', sans-serif;
  font-size: 3.6rem; /* 36px */
  line-height: 4.4rem; /* 44px */
}

h3 {
  font-family: 'Montserrat Alternates', sans-serif;
  font-size: 1.8rem; /* 18px */
  line-height: 2.2rem; /* 22px */
}

h4 {
  font-family: 'Raleway', sans-serif;
  font-size: 3.6rem; /* 36px */
  font-weight: 700;
  line-height: 4.2rem; /* 42px */
}

h5 {
  font-family: 'Raleway', sans-serif;
  font-size: 1.8rem; /* 18px */
  font-weight: 700;
  line-height: 2.1rem; /* 21px */
}

h6 {
  font-family: 'Raleway', sans-serif;
  font-size: 2.4rem; /* 24 px */
  font-weight: 400;
  line-height: 2.8rem; /* 28px */
}

p {
  font-family: 'Open Sans', sans-serif;
  font-size: 1.6rem; /* 16px */
  line-height: 2.2rem; /* 22px */
  font-weight: 400;
}

.text-box {
  max-width: 640px;
  margin: 0 auto;
}

/** navigation **/

nav {
  color: #FBF8F3;
  height: 7rem;
  overflow: visible;
  position: relative;
  z-index: 4;
}

.nav-contents {
  align-items: center;
  background-color: #121121;
  border-bottom: 2px solid #FEEB99;
  display: flex;
  flex-direction: row;
  height: 7rem;
  max-width: 320px;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 4;
}

#myLogo {
  color: #FBF8F3;
  display: flex;
  padding: 0 8%;
  text-decoration: none;
}

#myLogo:hover {
  text-shadow: 0 0 20px #FBF8F3;
}

#myLinks {
  background-color: #121121;
  border-bottom: 2px solid #FEEB99;
  display: none;
  margin-top: 7rem;
  padding: 12px 6%;
  position: absolute;
  right: 0;
  top: 0;
  width: 100%;
}

.nav-text a {
  color: #FEEB99;
  display: block;
  padding: 1.6rem 1.4rem;
  text-align: right;
  text-decoration: none;
}


.nav-text a:hover {
  text-shadow: 0 0 10px #FEEB99;
}

.burger {
  color: #FEEB99;
  cursor: pointer;
  position: absolute;
  right: 8%;
}

.burger:hover {
  text-shadow: 0 0 30px #FEEB99;
}

.active {
  background-color: #FEEB99;
}

/** Buttons **/

.btn {
  align-items: center;
  color: inherit;
  display: flex;
  height: 60px;
  justify-content: center;
  text-decoration: none;
  width: 241px;
}

.CONTACT {
  border: 1px solid #FEEB99;
  box-shadow: 0 0 4px #FEEB99, inset 0 0 4px #FEEB99;
  height: 4.8rem;
  margin: 20px 0 30px 0;
  width: 14.7rem;
}

.CONTACT:hover {
  box-shadow: 0 0 20px #FEEB99, inset 0 0 10px #FEEB99;
}

.CONTACT a {
  align-items: center;
  color: #FEEB99;
  display: flex;
  height: 4.8rem; /* 48px */
  justify-content: center;
  text-decoration: none;
  width: 14.7rem; /* 147px */
}

.CONTACT a:hover {
  text-shadow: 0 0 5px #FEEB99;
}

.content-btn {
  color: #FEEB99;
  height: 40px;
  margin: 2rem 0;
  text-decoration: none;
  width: 200px;
}

.content-btn:hover {
  text-shadow: 0 0 20px #FEEB99;
}

/** header **/

header {
  position: relative;
}

/** footer **/

footer {
  margin-top: 5rem; /* 50px */
  text-align: center;
}

#footer-contact {
  display: inline-flex;
}

.social-media-links {
  display: flex;
  justify-content: center;
}

.social-media-links li {
  margin: 0 10px 50px 10px;
}

.social-media-links li:hover {
  text-shadow: 0 0 10px #f8f8f3;
}

.fab {
  color: #FBF8F3;
  font-size: 2rem; /** 20px **/
}

/** SECTION & PARAGRAPH **/

section {
  margin-top: 5rem;
  padding-bottom: 2rem;
  position: relative;
}

.section-paragraph {
  margin: 0 auto;
  padding-bottom: 3rem;
}

.paragraph-title {
  margin-bottom: 5px;
}

/** SECTION titles **/

.section-title {
  margin-bottom: 3rem;
  z-index: 1;
}

.title-box {
  margin-top: 10rem;
  position: relative;
}

.title {
  position: absolute;
  top: -3.5rem;
}

/* RED BOX CODE */

.red-bg {
  background-color: #4B182E;
  background-image: url("https://www.transparenttextures.com/patterns/simple-dashed.png");
  box-shadow: 0 0 50px #4B182E;
  height: 100%;
  position: relative;
  z-index: 0;
}

.red-title-box {
  position: relative;
  top: -3.5rem;
}

.red-title {
  margin-bottom: 0px;
}


/** SPACE MODIFIERS **/

.text-space {
  margin-top: 10px;
}

.less-space {
  padding-bottom: 5px;
}

.text-deco {
  color: #FEEB99;
}

.sticky-destination {
  position: relative;
  top: -11rem;
}

.red-sticky-destination {
  position: relative;
  top: -15rem;
}

#work {
  position: relative;
  top: -4rem;
}

/******* HOMEPAGE CSS *******/

/** INTRODUCTION **/

.home-header {
  background-color: #4B182E;
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: #f8f8f3;
  height: 100%;
  width: 100%;
}

.home-header-text {
  padding-top: 5rem;
  padding-left: 3rem;
  max-width: 320px;
  padding-bottom: 10rem;
}

.sub-header {
  margin-top: 20px;
}

.transition {
  position: absolute;
  bottom: 0;
  width: 100%;
}

/** PROJECTS **/

.projects-container {
  position: relative;

}

.projects-container a {
  color: inherit;
  text-decoration: none;
}

.project-section {
    margin-bottom: 5rem;
  }

.display-project-image {
  height: 100%;
  padding: 3rem 0;
  width: 100%;
}

.display-project-text {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0 auto;
  max-width: 320px;
  padding: 0 2rem;
  text-align: center;
  width: 90%;
}

.case-study-btn {
    align-items: center;
    background-color: #FEEB99;
    border-radius: 30px;
    color: #121121;
    display: flex;
    height: 4.4rem;
    justify-content: center;
    margin: 3rem auto;
    text-decoration: none;
    width: 18.1rem;
}

.case-study-btn:hover {
  box-shadow: 0 0 12px #FEEB99;
}
/* ... */

